🩹 Fixing scrollbar on windows & ubuntu

--- a/style/Default.css
+++ b/style/Default.css
@@ -1263,3 +1263,12 @@ details[open] summary {
 		transform: rotate(360deg);
 	}
 }
+
+  
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
+}
+.scrollbar-none {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
